--- a/pages/changepassword/changepassword.wxml
+++ b/pages/changepassword/changepassword.wxml
@@ -3,19 +3,17 @@
 		<van-cell-group >
 			<van-field
 			clearable
-			value="{{ expassword }}"
-			type="password"
+			value="{{ acc_expassword }}"
 			label="原密码"
 			placeholder="请输入原密码"
 			required
 			border="{{ false }}"
 			error-message="{{expasswordmessage}}"
 			bind:change="expasswordchange"
-			name="acc_expassword"
 			/>
 			<van-field
 			clearable
-			value="{{ newpassword }}"
+			value="{{ acc_newpassword }}"
 			type="password"
 			label="新密码"
 			placeholder="请设置新密码"
@@ -23,11 +21,10 @@
 			border="{{ false }}"
 			error-message="{{newpasswordmessage}}"
 			bind:change="newpasswordchange"
-			name="acc_newpassword"
 			/>
 			<van-field
 			clearable
-			value="{{ repassword }}"
+			value="{{ acc_repassword }}"
 			type="password"
 			label="新密码"
 			placeholder="请再次确定新密码"
@@ -35,11 +32,10 @@
 			border="{{ false }}"
 			error-message="{{repasswordmessage}}"
 			bind:change="repasswordchange"
-			name="acc_repassword"
 			/>
 		</van-cell-group>
 		密码长度为6-20位
-		<van-button color="#1296DB" size="large">确定修改</van-button>
+		<van-button color="#1296DB" size="large" bindtap = "ensure">确定修改</van-button>
 	</view>
-    
+    <van-toast id="van-toast" />
 </view>
