--- a/pages/ticketdetails/ticketdetails.wxss
+++ b/pages/ticketdetails/ticketdetails.wxss
@@ -4,13 +4,13 @@
 }
 .notice_box_cls .notice_body0 {
     position: relative;
-    height: 400rpx;
+    height: 500rpx;
     padding: 10rpx;
     border-bottom:10rpx dashed #1296DB;
 }
 .code{
     font-size:34rpx;
-    margin:20rpx;
+    margin:16rpx;
     text-align: center;
 }
 .notice .notice_bodybottom {
@@ -21,7 +21,7 @@
 .notice_title{
     font-size: 34rpx;
     font-weight: bolder;
-    line-height: 120rpx;
+    line-height: 114rpx;
     text-align: center;
 
 }
@@ -29,13 +29,10 @@
     width: 90%;
     margin: 0 auto;
 }
-.logo{
-    margin: 40rpx;
-    /* text-align: center; */
-}
+
 .pic{
-    width: 68%;
-    height: 68%;
+    width: 50%;
+    height: 50%;
     margin: auto;
 }
 .el-form-item {
@@ -76,17 +73,17 @@
     transform: rotate(270deg);
 }
 .img{
-    width: 200rpx; 
-    height: 200rpx; 
-    border: 1rpx solid #A98364;
+    width: 268rpx; 
+    height: 268rpx; 
+    /* border: 1rpx solid #A98364; */
     margin:  auto;
     text-align: center;
     line-height: 160rpx;
 }
 .img2{
-    width: 320rpx; 
-    height: 100rpx; 
-    border: 1rpx solid #A98364;
+    width: 480rpx; 
+    height: 150rpx; 
+    /* border: 1rpx solid #A98364; */
     margin:  auto;
     text-align: center;
     line-height: 100rpx;
