--- a/pages/subscribe/subscribe.wxss
+++ b/pages/subscribe/subscribe.wxss
@@ -53,28 +53,33 @@ page {
 .choosePerson_1_2 {
     margin-top: 10px;
 }
+
 .confirmPerson {
     margin: 15px;
 }
+
 .confirmPerson_1 {
     /* margin: 10px 15px; */
     /* width: 100%; */
     /* height: 300px; */
 }
+
 .submit {
     position: fixed;
     bottom: 0;
     width: 100%;
     height: 50px;
 }
-.submit_1 .van-col--12{
+
+.submit_1 .van-col--12 {
     height: 50px;
     background-color: rgb(255, 255, 255);
     padding: 10px 0 0 15px;
 }
-.submit_2 .van-col--12{
+
+.submit_2 .van-col--12 {
     height: 50px;
-    background: rgba(113,181,250);
+    background: rgba(113, 181, 250);
     font-size: 1.2rem;
     font-weight: bolder;
     text-align: center;
@@ -86,27 +91,29 @@ page {
     background: #f5f5f5;
 }
 
-.popupBox {
-    
-}
+.popupBox {}
+
 .popupBox_1 {
     margin: 10px 15px;
     width: 100%;
     height: 36px;
 }
+
 .popupBox_1_2 {
     float: right;
 }
+
 .popupBox_2_1 {
     margin: 0 15px;
     width: 100%;
     height: 40px;
     background-color: rgb(255, 255, 255);
-    color:rgba(25,137,250);
+    color: rgba(25, 137, 250);
     text-align: center;
     line-height: 36px;
     font-size: 0.8rem;
 }
+
 .popupBox_3 {
     width: 100%;
     height: 25px;
@@ -115,35 +122,44 @@ page {
     /* font-size: 0.8rem; */
     margin: 5px 0 5px 0;
 }
+
 .popupBox_3 .tit {
-    color:rgba(25,137,250);
+    color: rgba(25, 137, 250);
 }
+
 .popupBox_4 {
     margin: 10px 15px;
 }
-.linetext{
+
+.linetext {
     display: flex;
     justify-content: space-between;
     width: 88%;
 }
-.certer{
+
+.certer {
     padding-left: 18%;
 }
-.linetext2{
+
+.linetext2 {
     display: flex;
     justify-content: space-between;
     width: 80%;
 }
+
 .value-class {
     flex: none !important;
-  }
-  .iconsty{
-    
-      margin: auto;
-  }
-  .iconsty_c{
-      margin-right: 16rpx;
-  }
-  .titlesty{
-      margin-left: 36rpx;
-  }
+}
+
+.iconsty {
+    width: 52px;
+    margin: auto;
+}
+
+.iconsty_c {
+    margin-right: 16rpx;
+}
+
+.titlesty {
+    margin-left: 36rpx;
+}
