--- a/pages/changepassword/changepassword.wxml
+++ b/pages/changepassword/changepassword.wxml
@@ -4,6 +4,7 @@
 			<van-field
 			clearable
 			value="{{ acc_expassword }}"
+			type="password"
 			label="原密码"
 			placeholder="请输入原密码"
 			required
