--- a/pages/reinformation/reinformation.wxss
+++ b/pages/reinformation/reinformation.wxss
@@ -1,23 +1,21 @@
 page {
   background: #f5f5f5;
 }
-  .cell{
-    /* margin-top: 26rpx; */
-  }
-  .value-class {
-    flex: none !important;
-  }
-  van-checkbox{
-    margin-left: 10rpx;
-  }
-  
-  .btn{
-    text-align: center;
-    padding: 40rpx;
-  }
-  van-radio{
-    margin-left: 10rpx;
-  }
-  van-button{
-      margin: 20rpx;
-  }
+.value-class {
+  flex: none !important;
+}
+van-checkbox{
+  margin-left: 10rpx;
+}
+.btn{
+  margin:0 30rpx;
+  margin-top: 30rpx;
+  display: flex;
+  justify-content: space-between;
+}
+.van-button{
+  width: 320rpx;
+}
+van-radio{
+  margin-left: 10rpx;
+}
