--- a/pages/userinformation/userinformation.wxss
+++ b/pages/userinformation/userinformation.wxss
@@ -19,8 +19,50 @@ page {
       margin-top: 10%;
   }
   .value-class {
-    -webkit-flex: 5 !important;
-    flex: 4 !important;
+    -webkit-flex: 2 !important;
+    flex: 2 !important;
     text-align: right !important;
     /* color: rgba(200,201,204) !important; */
 }
+.namesty{
+    width:80%;
+    margin:24px auto;
+    line-height: 60px;
+}
+
+.van-picker__toolbar {
+    display: flex;
+    justify-content: space-between;
+    height: 44px;
+    line-height: 44px;
+    }
+.van-hairline--top-bottom{
+    position: relative;
+}        
+        
+.van-picker__cancel,.van-picker__confirm {
+    padding: 0 16px;
+    font-size: 14px;
+    color: #1989fa;
+    
+    }
+                    
+.van-picker__title {
+    max-width: 50%;
+    text-align: center;
+    font-weight: 500;
+    font-size: 16px;
+    
+    }
+.van-ellipsis {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    
+    }
+.btn{
+    text-align: center;
+    margin-top: 40rpx;
+}
+                    
+                
