--- a/pages/register/register.wxml
+++ b/pages/register/register.wxml
@@ -27,6 +27,7 @@
             </view>
         </van-row>
         <van-toast id="van-toast" />
+        <van-dialog id="van-dialog" />
     </view>
 </van-row>
 <van-notify id="van-notify" />
