--- a/pages/location/location.wxss
+++ b/pages/location/location.wxss
@@ -1,7 +1,17 @@
 page {
     background: #f5f5f5;
-  }
-  .bc{
-      width: 100%;
-      height: 100%;
-  }
+}
+
+.bc {
+    width: 100%;
+    height: 100%;
+}
+
+.btn-area {
+    margin-top: 30rpx;
+    overflow: hidden;
+}
+
+.page-body-button {
+    margin-top: 20rpx;
+}
