--- a/pages/myreservation/myreservation.wxml
+++ b/pages/myreservation/myreservation.wxml
@@ -1,42 +1,26 @@
 <view class="bc">
+  <view wx:if="{{tabledata.length > 0}}">
     <view class="mianban" wx:for="{{tabledata}}" wx:key="index">
-    <van-panel title="博物馆入场卷" status="NO.{{item.id}}" use-footer-slot >
+      <van-panel title="博物馆入场卷" status="NO.{{item.id}}" use-footer-slot>
         <view>
-            <van-cell-group>
-                <van-field
-                  value="{{item.name}}"
-                  label="姓名"
-                  readonly
-                  border="{{ false }}"
-                />
-                <van-field
-                  value="{{item.idNo}}"
-                  label="证件号"
-                  readonly
-                  border="{{ false }}"
-                />
-                <van-field
-                  value="{{item.phone}}"
-                  label="手机号"
-                  readonly
-                  border="{{ false }}"
-                />
-                <van-field
-                  value="{{item.visitDate}}"
-                  
-                  label="参观日期"
-                  readonly
-                  border="{{ false }}"
-                />
-              </van-cell-group>
+          <van-cell-group>
+            <van-field value="{{item.name}}" label="姓名" readonly border="{{ false }}" />
+            <van-field value="{{item.idNo}}" label="证件号" readonly border="{{ false }}" />
+            <van-field value="{{item.phone}}" label="手机号" readonly border="{{ false }}" />
+            <van-field value="{{item.visitDate}}" label="参观日期" readonly border="{{ false }}" />
+          </van-cell-group>
         </view>
         <view slot="footer" class="btn">
-          <van-button size="small" color="#1296DB"  bind:click='gotocheck' data-id="{{item.id}}">取票</van-button>
-          <van-button size="small" bind:click='changetick' data-id="{{item.id}}" >改签</van-button>
+          <van-button size="small" color="#1296DB" bind:click='gotocheck' data-id="{{item.id}}">取票</van-button>
+          <van-button size="small" bind:click='changetick' data-id="{{item.id}}">改签</van-button>
           <van-button size="small" type="danger" bind:click='cancel' data-id="{{item.id}}">取消</van-button>
         </view>
-    </van-panel>
+      </van-panel>
     </view>
-    <van-dialog id="van-dialog" />
-    <van-toast id="van-toast" />
+  </view>
+  <view class="full" wx:else>
+    <view class="tit">暂时没有预约记录，快去预约吧</view>
+  </view>
+  <van-dialog id="van-dialog" />
+  <van-toast id="van-toast" />
 </view>
