--- a/pages/myreservation/myreservation.wxss
+++ b/pages/myreservation/myreservation.wxss
@@ -1,18 +1,38 @@
 page {
   background: #f5f5f5;
 }
-.bc{
-    padding-top: 20rpx;
-    /* width: 100%; */
-    /* height: 1200rpx;
+
+.bc {
+  padding-top: 20rpx;
+  /* width: 100%; */
+  /* height: 1200rpx;
     background-color: #f5f5f5; */
-  }
-  .btn{
-    text-align: right;
-  }
-  van-button{
-      margin-left: 12rpx;
-  }
-  .mianban{
-      margin-bottom: 20rpx;
-  }
+}
+
+.btn {
+  text-align: right;
+}
+
+van-button {
+  margin-left: 12rpx;
+}
+
+.mianban {
+  margin-bottom: 20rpx;
+}
+
+.full {
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  text-align: center;
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+  justify-content: center;
+}
+
+.tit {
+  /* color: rgba(230,232,234); */
+  color: #DDD;
+}
