--- a/pages/login/login.wxml
+++ b/pages/login/login.wxml
@@ -7,8 +7,11 @@
         height="8rem"
         src="{{fileurl}}"
         />
-        <view class="text">
+        <view class="text" wx:if="{{name != null && name.length > 0}}">
         {{name}}
+        </view>
+        <view class="text2" wx:else>
+        暂未设置姓名
         </view>
     </view>
     <view class="main">
