--- a/pages/launch/launch.wxml
+++ b/pages/launch/launch.wxml
@@ -3,7 +3,7 @@
     <cover-image src="../../icons/piao.png"  />
   </view>
   <view class="text">
-      票务预约系统
+    圣东票务在线预约移动端软件
       
   </view>
   <view class="text">
