--- a/pages/reinformation/reinformation.wxml
+++ b/pages/reinformation/reinformation.wxml
@@ -1,28 +1,35 @@
-<view >
-<view class="cell">
-    <van-cell title="预约参观日期选择" bind:click="onDisplay" is-link value="{{ subscribeDate }}"/>
-        <van-calendar
-        show="{{ show }}"
-        min-date="{{ minDate }}"
-        max-date="{{ maxDate }}"
-        bind:close="onClose" 
-        bind:confirm="onConfirm"
-   
-        />
-      <van-radio-group value="{{ radio }}" bind:change="onChange">
+<view>
+  <view class="cell">
+    <van-cell title="预约参观日期选择" bind:click="onDisplay" is-link value="{{ subscribeDate }}" />
+    <van-calendar show="{{ show }}" min-date="{{ minDate }}" max-date="{{ maxDate }}" bind:close="onClose"
+      bind:confirm="onConfirm" />
+    <van-radio-group value="{{ radio }}" bind:change="onChange">
+      <van-cell-group>
+        <van-cell center title="上午票" clickable data-name="1" value="{{time1}}" label="{{timeSlice1}}"
+          value-class="value-class" bind:click="onClick">
+          <van-radio slot="right-icon" name="1" />
+        </van-cell>
+        <van-cell center title="下午票" clickable data-name="2" value="{{time2}}" label="{{timeSlice2}}"
+          value-class="value-class" bind:click="onClick">
+          <van-radio slot="right-icon" name="2" />
+        </van-cell>
+      </van-cell-group>
+    </van-radio-group>
+    <view class="popupBoxVisit">
+      <view style="text-align: center;">选择改签景点</view>
+      <van-checkbox-group value="{{ visitResult }}" bind:change="onChangeVisit">
         <van-cell-group>
-          <van-cell center title="上午票" clickable data-name="1" value="{{time1}}" label="{{timeSlice1}}" value-class="value-class" bind:click="onClick">
-            <van-radio slot="right-icon" name="1" />
-          </van-cell>
-          <van-cell center title="下午票" clickable data-name="2" value="{{time2}}" label="{{timeSlice2}}" value-class="value-class" bind:click="onClick">
-            <van-radio slot="right-icon" name="2" />
+          <van-cell wx:for="{{ visitList }}" wx:key="index" title="{{item.name}}" value-class="value-class" clickable
+            data-id="{{ item.id }}" bind:click="toggleVisit">
+            <van-checkbox catch:tap="noopVisit" class="checkboxes-{{ index }}" name="{{ item.id }}"/>
           </van-cell>
         </van-cell-group>
-      </van-radio-group>
-</view>
-<view class="btn">
-  <van-button plain color="#1296DB" size="normal"  bind:click = 'gotoreturn'>  取 消  </van-button>
-  <van-button color="#1296DB" size="normal" bind:click = 'gotoreinformation'>  确 定  </van-button>
-</view>
-<van-toast id="van-toast" />
+      </van-checkbox-group>
+    </view>
+  </view>
+  <view class="btn">
+    <van-button plain color="#1296DB" size="normal" bind:click='gotoreturn'> 取 消 </van-button>
+    <van-button color="#1296DB" size="normal" bind:click='gotoreinformation'> 确 定 </van-button>
+  </view>
+  <van-toast id="van-toast" />
 </view>
